--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -19,16 +20,21 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@types/styled-components": "^5.1.34",
     "@uiw/react-textarea-code-editor": "^3.1.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
+    "mlflow": "^2.0.7",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.3",
     "next": "14.2.16",
+    "prisma": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
